add setup, atari blocks color, clean code

--- a/demo/atari.html
+++ b/demo/atari.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>infinite atari</title>
   </head>
-  <main><div id="app" style="margin-left: 500px"></div></main>
+  <main>
+    <div id="app"></div>
+  </main>
   <script type="module" src="/src/demo/atari-sc.tsx"></script>
   <body></body>
 </html>
