export title, add uses

--- a/index.html
+++ b/index.html
@@ -9,11 +9,31 @@
     <section>
       <h1>hello</h1>
       <div id="hello"></div>
-      <p>I am just a random university student in Japan!</p>
+      <p><a href="https://github.com/halfminami">My Github profile..</a></p>
       <p>
         I'm interested in data structures and algorithms. (though I'm bad at it)
       </p>
       <p>Here I create htmls that I like!</p>
+    </section>
+    <section>
+      <h1>uses</h1>
+      <ul>
+        <li>
+          <p>built with <a href="https://vitejs.dev/">Vite</a> (preact-ts)</p>
+        </li>
+        <li>
+          <p>
+            CSS preprocessor <a href="https://sass-lang.com/">sass</a> (using
+            scss)
+          </p>
+        </li>
+        <li>
+          <p>UI library <a href="https://preactjs.com/">preact</a></p>
+        </li>
+        <li>
+          <p><span class="repo"></span></p>
+        </li>
+      </ul>
     </section>
     <section>
       <h1>index</h1>
