fix main welcome message, adjust index

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <section>
       <h1>hello</h1>
       <div id="hello"></div>
-      <p><a href="https://github.com/halfminami">My Github profile..</a></p>
       <p>
         I'm interested in data structures and algorithms. (though I'm bad at it)
       </p>
-      <p>Here I create htmls that I like!</p>
+      <p>Here I create web stuff that I like!</p>
+      <p><a href="https://github.com/halfminami">My Github profile..</a></p>
     </section>
+
     <section>
       <h1>uses</h1>
       <ul>
@@ -35,6 +36,7 @@
         </li>
       </ul>
     </section>
+
     <section>
       <h1>index</h1>
       <main>
