--- a/demo/breakout.html
+++ b/demo/breakout.html
@@ -14,7 +14,7 @@
       Hit the ball on the right side of the paddle to bounce it to the right
     </p>
     <p>Hit the ball on the left side of the paddle to bounce it to the left</p>
-    <p>There's no score, lives</p>
+    <p>There's neither score nor lives</p>
     <p>bouncing at a random speed</p>
     <p>wrote in preact, html element</p>
     <script type="module" src="/src/demo/breakout-sc.tsx"></script>
