:has() fix on /index.html for firefox

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <li>
           <p><span class="repo"></span></p>
         </li>
+        <li style="font-size: 90%">
+          <p>
+            I only test with Chrome on Windows. Fancy CSSs are likely to be
+            broken on other browsers. I'm too lazy to add fallback css rules,
+            sorry!
+          </p>
+        </li>
       </ul>
     </section>
 
